# biosim_g14_Erik_Haavard

./: .gitignore  README.md  requirements.txt  setup.cfg
doc/: api_reference.rst  conf.py  examples.rst  index.rst  motivation.rst  thought_process.rst
doc/_build/doctrees/: API_reference.doctree  environment.pickle  index.doctree
doc/_build/html/: .buildinfo  API_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/biosim/: animals.html  island.html  landscape.html
doc/_build/html/_sources/: API_reference.rst.txt  index.rst.txt
examples/: check_sim.py  check_sim_movie.py  population_generator.py
src/biosim/: __init__.py  animals.py  island.py  landscape.py  simulation.py
tests/: test_animals.py  test_island.py  test_landscape.py
